<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CatalogoActivity">

    <TextView
        android:id="@+id/tvTituloCatalogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/catalogo_destinos"
        android:textColor="@color/primary_text"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAgregarDestino"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/agregar_destino"
        android:textColor="@color/primary_text"
        android:backgroundTint="@color/accent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloCatalogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/primary_text"
        android:backgroundTint="@color/primary_light" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDestinos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnAgregarDestino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_destino" />

</androidx.constraintlayout.widget.ConstraintLayout>